<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>ch.guru.springframework.apifirst</groupId>
    <artifactId>apifirst-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <organization>
        <name>dboeckli</name>
    </organization>

    <modules>
        <module>apifirst-api</module>
        <module>apifirst-server</module>
        <module>apifirst-server-jpa</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <repo.name>apifirst-parent</repo.name>

        <google.findbugs.version>3.0.2</google.findbugs.version>
        <jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
        <openapi-generator-maven-plugin.version>7.11.0</openapi-generator-maven-plugin.version>
        <swagger.request.validator.version>2.44.1</swagger.request.validator.version>

        <logbook.version>3.10.0</logbook.version>
        <logstash-logback.version>8.0</logstash-logback.version>

        <!-- Sonar -->
        <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.language>java</sonar.language>
        <jacoco.version>0.8.12</jacoco.version>

        <!--suppress UnresolvedMavenProperty -->
        <buildNumber>${git.commit.id.abbrev}</buildNumber>
    </properties>

    <scm>
        <connection>scm:git:https://github.com/${project.organization.name}/${repo.name}.git</connection>
        <developerConnection>scm:git:https://github.com/${project.organization.name}/${repo.name}.git</developerConnection>
        <url>https://github.com/${project.organization.name}/${repo.name}.git</url>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <!--
            you need a personal access token for the dboeckli organization: generate access token on github: https://github.com/settings/apps
            add gitHub server configuration to settings.xml file with username and password (add token there)
            Configure maven settings of IntelliJ to use your personal settings.xml
            -->
            <id>github</id>
            <url>https://maven.pkg.github.com/${project.organization.name}/${repo.name}</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub dboeckli Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/${project.organization.name}/${repo.name}</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${google.findbugs.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson-databind-nullable.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addClasspath>true</addClasspath>
                                <classpathPrefix>lib/</classpathPrefix>
                                <!-- Force the use of '-SNAPSHOT' version naming -->
                                <useUniqueVersions>false</useUniqueVersions>
                            </manifest>
                            <manifestEntries>
                                <Implementation-Title>${project.name}</Implementation-Title>
                                <groupId>${project.groupId}</groupId>
                                <artifactId>${project.artifactId}</artifactId>
                                <Implementation-Version>${project.version}</Implementation-Version>
                                <git-SHA-1>${buildNumber}</git-SHA-1>
                                <source-url>${project.scm.url}</source-url>
                                <BuildDate>${maven.build.timestamp}</BuildDate>
                                <Built-By>${user.name}</Built-By>
                                <Build-Jdk>${java.version}</Build-Jdk>
                                <packaging>${project.packaging}</packaging>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jacoco-create-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                            <outputDirectory>target/site/jacoco</outputDirectory> <!-- default -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--suppress UnresolvedMavenProperty. argline is set by jacoco -->
                    <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <!--suppress UnresolvedMavenProperty. argline is set by jacoco -->
                    <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                </configuration>
            </plugin>
            
            <!--
            this plugin generates some git properties. We use the "git.commit.id.abbrev" variable which we append
            to the docker image id for builds in jenkins (docker.application.image.tag). See "jenkins" profile at the top.
            -->
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <verbose>true</verbose>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                    <commitIdGenerationMode>full</commitIdGenerationMode>
                    <runOnlyOnce>true</runOnlyOnce>
                    <skipPoms>false</skipPoms>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>

